<resources>
    <string name="app_name">Vietnamese astrology Testing by Thy.I test here.</string>
    <string name="hello_world">Vietnamese astrology was created to let you get a hold of your
        destiny by using specific identification items such as your name, gender, date
         and time of birth to foresee parts of your future. Want to know more details about your future
        rather than common horoscope that you can find anywhere? Start reading now to get your prediction!  </string>
    <string name="action_settings">Settings</string>
    <string name="start_reading">Start your reading now</string>
    <string name="view_result">View result</string>
    <string name="empty_name">Empty name error</string>
    <string name="empty_name_error">You must enter your name for the correct prediction.</string>
    <string name="empty_gender_error">You must choose your gender for the correct prediction</string>
    <string name="empty_date_of_birth">You must choose your date of birth for the correct prediction</string>
    <string name="empty_time_of_birth">You must choose your time of birth for the correct prediction</string>
    <string name="empty_place">You must choose your place of birth for the correct prediction</string>
    <string name="gender">Biological Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="place">Place of birth</string>
    <string name="here">Vietnam or Laos or Cambodia</string>
    <string name="there">Different places</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="changeDate">Change</string>
    <string name="enter_detail">Enter your correct details so we can predict your future.</string>
    <string name="name_field">Name field</string>
    <string name="cancel">Cancel</string>
    <string name="mouse">Mouse (23h - 1h)</string>
    <string name="buffalo">Buffalo (1h - 3h)</string>
    <string name="tiger">Tiger (3h - 5h)</string>
    <string name="cat">Cat (5h - 7h)</string>
    <string name="dragon">Dragon (7h - 9h)</string>
    <string name="snake">Snake (9h - 11h)</string>
    <string name="horse">Horse (11h - 13h)</string>
    <string name="goat">Goat (13h - 15h)</string>
    <string name="monkey">Monkey (15h - 17h)</string>
    <string name="chicken">Chicken (17h - 19h)</string>
    <string name="dog">Dog ( 19h - 21h)</string>
    <string name="pig">Pig ( 21h - 23h)</string>
    <string name="time_hint">Note : If you were born on exactly 19h then you belong to the Dog hour instead of the Chicken.</string>
    <string name="was_born">Were born: </string>
    <string name="life">Mệnh: </string>
    <string name="canhthin">Dragon (Canh Thìn)</string>
    <string name="tanty">Snake (Tân Tỵ)</string>
    <string name="nhamngo">Horse (Nhâm Ngọ)</string>
    <string name="quymui">Goat (Quý Mùi)</string>
    <string name="giapthan">Monkey (Giáp Thân)</string>
    <string name="atdau">Chicken (Ất Dậu)</string>
    <string name="binhtuat">Dog (Bính Tuất)</string>
    <string name="dinhhoi">Pig (Đinh Hợi)</string>
    <string name="mauty">Mouse (Mậu Tý)</string>
    <string name="kysuu">Buffalo (Kỷ Sửu)</string>
    <string name="canhdan">Tiger(Canh Dần)</string>
    <string name="tanmao">Cat (Tân Mão)</string>
    <string name="nhamthin">Dragon (Nhâm thìn)</string>
    <string name="quyty">Snake (Quý Tỵ)</string>
    <string name="giapngo">Horse (Giáp Ngọ)</string>
    <string name="atmui">Goat (Ất Mùi)</string>
    <string name="binhthan">Monkey (Bính Thân)</string>
    <string name="dinhdau">Chicken (Đinh Dậu)</string>
    <string name="mautuat">Dog (Mậu Tuất)</string>
    <string name="kyhoi">Pig (Kỷ Hợi)</string>
    <string name="canhty">Mouse (Canh tý) </string>
    <string name="tansuu">Buffalo (Tân Sửu)</string>
    <string name="nhamdan">Tiger (Nhâm Dần)</string>
    <string name="quymao">Cat (Quý Mão)</string>
    <string name="giapthin">Dragon (Giáp Thìn)</string>
    <string name="atty">Snake (Ất Tỵ)</string>
    <string name="binhngo">Horse (Bính Ngọ)</string>
    <string name="dinhmui">GOat (Đinh Mùi)</string>
    <string name="mauthan">Monkey (Mậu Thân)</string>
    <string name="kydau">Chicken (Kỷ Dậu)</string>
    <string name="canhtuat">Dog (Canh Tuất)</string>
    <string name="tanhoi">Pig (Tân Hợi)</string>
    <string name="nhamty">Mouse (Nhâm Tý)</string>
    <string name="quysuu">Buffalo (Quý Sửu)</string>
    <string name="giapdan">Tiger (Giáp Dần)</string>
    <string name="atmao">Cat (Ất Mão)</string>
    <string name="binhthin">Dragon (Bính Thìn)</string>
    <string name="dinhty">Snake (Đinh Tỵ)</string>
    <string name="maungo">Horse (Mậu Ngọ)</string>
    <string name="kymui">Goat (Kỷ Mùi)</string>
    <string name="canhthan">Monkey (Canh Thân)</string>
    <string name="tandau">Chicken (Tân Dậu)</string>
    <string name="nhamtuat">Dog (Nhâm Tuất)</string>
    <string name="quyhoi">Pig (Quý Hợi)</string>
    <string name="giapty">Mouse (Giáp Tý)</string>
    <string name="atsuu">Buffalo (Ất Sửu)</string>
    <string name="binhdan">Tiger (Bính Dần)</string>
    <string name="dinhmao">Cat (Đinh Mão)</string>
    <string name="mauthin">Dragon (Mậu Thìn)</string>
    <string name="kyty">Snake (Kỷ Tỵ)</string>
    <string name="canhngo">Horse (Canh Ngọ)</string>
    <string name="tanmui">Goat (Tân Mùi)</string>
    <string name="nhamthan">Monkey (Nhâm Thân)</string>
    <string name="quydau">Chicken (Quý Dậu)</string>
    <string name="giaptuat">Dog (Giáp Tuất)</string>
    <string name="athoi">Pig (Ất Hợi)</string>
    <string name="binhty">Mouse (Bính Tý)</string>
    <string name="dinhsuu">Buffalo (Đinh Sửu)</string>
    <string name="maudan">Tiger (Mậu Dần)</string>
    <string name="kymao">Cat (Kỷ Mão)</string>
    <string name="kimmenh">Metal Element</string>
    <string name="mocmenh">Wood Element</string>
    <string name="thuymenh">Water Element</string>
    <string name="hoamenh">Fire Element</string>
    <string name="thomenh">Earth Element</string>
    <string name="name">Your name</string>
    <string name="you_was_born"> You were born</string>
    <string name="in_year_of"> in the year of</string>
    <string name="year_belong_to">Your year of birth belongs to </string>
    <string name="fortune_teller_for"> My prediction for </string>
    <string name="gioty">Time of the mouse</string>
    <string name="giosuu">Time of the buffalo</string>
    <string name="giodan">Time of the tiger</string>
    <string name="giomao">Time of the cat</string>
    <string name="giothin">Time of the dragon</string>
    <string name="gioty5">Time of the snake</string>
    <string name="giongo">Time of the horse</string>
    <string name="giomui">Time of the goat</string>
    <string name="giothan">Time of the monkey</string>
    <string name="giodau">Time of the chicken</string>
    <string name="giotuat">Time of the dog</string>
    <string name="giohoi">Time of the pig</string>
    <string name="duong">Yang</string>
    <string name="am">Yin</string>
    <string name="general1">Men born on the year of the horse or the goat with the life fate situated on the Mouse or Buffalo sign \: There
    are a lot of difficulties in life you must face and there won\'t be much time you will be satisfied by the result.
    However if you can overcome the hard time then you will succeed. </string>
    <string name="general2"> You are smart and hardworking.</string>
    <string name="general3"> You are respected and loved by other people.</string>
    <string name="general4"> You will lead a leisure life.</string>
    <string name="general5"> You are ery smart and sharp. You may face lots of difficulties when young.</string>
    <string name="general6"> However there is the star of Thien dia khong on the same spot so you can live a long life.</string>
    <string name="general7"> You will have a standard life style.</string>
    <string name="general8"> You may not have a very good health. Be sure to pay special attention to your lifestyle.</string>
    <string name="general9"> You face lots of difficulties when young like a pure flower getting smashed by the wind.</string>
    <string name="general10"> You Will get rich but you don\'t have a very good health. </string>
    <string name="general11"> You may not be rich but you will live a long life. </string>
    <string name="general12"> Your \"Menh\" has \"Tuan triet\" star on it. It is a bad sign but there are no big star and \"Tuan triet\" is a small star so you won\'t face any problems. You will get
    what you want and live a long happy life.</string>
    <string name="general13"> Your \"Menh\" sign has \"Dia khong\" star, your \"Than\" sign has \"Dia kiep\" star. This combination shows that you are smart
    and sharp. However you will experience more sadness than happiness in your life. There may be more failure than success so you have
    to stay strong and keep things cool to go through it.</string>
    <string name="general14"> Since there is \"Dai hao\" and \"Tieu hao\" stars \(bad stars\) but there are no big star that shines on them you won\'t have bad luck.
    Even though you may not be very smart and bright at school, you will still have money and become a successful person.</string>
    <string name="general15"> Your \"Menh\" or your \"Than\" sign has \"Thien dong\", \"Thien luong\" or \"Pha quan\" stars shinning on it. Bad combination! Be careful with your health!</string>
    <string name="general16"> Your \"Menh\" sign has \"Dia kiep\" star shinning on it, your \"Than\" sign has \"Dia khong\" star on it. This result shows that you are smart and sharp. However you will experience more sadness than happiness in your life. There may be more failure than success so you have
    to stay strong and keep things cool to go through it.</string>
    <string name="general17"> Your \"Menh\" sign has no big star shinning on it. In this situation you will have lots of hardship and labor during your youth.</string>
    <string name="general18"> Your \"Than\" sign is situated on \"Thien di\" sign. This combination shows that you will build your career far from home and it will become very successful.
        You are an active person who loves to travel and to move to new places so you are not very family-oriented. You loves to meet new people and have a huge network
        connection. Most people in this situation experience life in their youth very early compared to other people around their age. They have more experience and lots of
        opportunities to work far from home.</string>
    <string name="general19"> Since your \"Thien di\" sign has \"Tuan triet\" star on it, you will not pass away in your hometown. </string>
    <string name="general20"> Your \"Than\" sign is situated in your \"The thiep\"\(husband/wife\) category and there is the star of "Thai am" on it so you will need lots of help from your husband/wife. You may also be someone who are scared of your husband/wife. </string>
    <string name="general21"> Your \"Than\" sign is situated in your \"The thiep\"\(husband/wife\) category and there is the star of "Tuan triet" on it. Be careful! You may face some difficulties with your marital life. </string>
    <string name="general22"> Your \"Than\" sign is situated on the same place as your "Tai Bach" category, this means you are a hardworking person who want to save lots of money. Your number one concern in life will be money, you work hard to earn money to feed yourself. You have fast management skill with money. You
    make money very fast but career for you is not an important factor as long as you can earn money you will work on whatever field.</string>
    <string name="general23"> You will earn fame before money.</string>
    <string name="general24"> You get rich by making business.</string>
    <string name="general25"> You should try to avoid career in the maritime field as you may have some accidents with working on water.</string>
</resources>