<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioLinear">
        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/mouse_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/mouse"
                android:text="@string/mouse"
                />
            <RadioButton
                android:id="@+id/buffalo_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/buffalo"
                android:text="@string/buffalo"/>
            <RadioButton
                android:id="@+id/tiger_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tiger"
                android:text="@string/tiger"/>
            <RadioButton
                android:id="@+id/cat_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cat"
                android:text="@string/cat"/>
            <RadioButton
                android:id="@+id/dragon_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/dragon"
                android:text="@string/dragon"/>
            <RadioButton
                android:id="@+id/snake_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/snake"
                android:text="@string/snake"/>
            <RadioButton
                android:id="@+id/horse_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:text="@string/horse"/>
            <RadioButton
                android:id="@+id/goat_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:text="@string/goat"/>
            <RadioButton
                android:id="@+id/monkey_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:text="@string/monkey"/>
            <RadioButton
                android:id="@+id/chicken_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:text="@string/chicken"/>
            <RadioButton
                android:id="@+id/dog_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:text="@string/dog"/>
            <RadioButton
                android:id="@+id/pig_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/pig"
                android:text="@string/pig"/>
        </RadioGroup>
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@+id/radioLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#FF3300"
            android:textStyle="italic"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_hint"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
